--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+.p-regular {
+  font-family: poppins, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.p-semibold {
+  font-family: poppins, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+.p-bold {
+  font-family: poppins, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+.app_wrapper {
+  padding: 0% 5%;
+}
+.text-blue {
+  color: #2e266f;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.head-left {
+  width: 50%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.head-left p {
+  font-size: 28px;
+  padding: 10px 0px 10px 15px;
+  border-left: 10px solid #fe043c;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.head-right {
+  width: 50%;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.head-right p {
+  color: #707070;
+  font-size: 18px;
+  line-height: 24px;
 }
